welcome.lessons.welcome.variables.Variables.scala.error
Variables:5: error: ')' expected but ';' found.
	(nbpas = nbpas+1;)
                        ^Variables:5: error: illegal start of statement
	(nbpas = nbpas+1;)
                         ^