welcome.lessons.welcome.variables.Variables.scala.code
var nbpas:int=0
while (!estSurBiscuit)  {
	avance()
	(nbpas = nbpas+1;)
}
